# ShettyXtreme

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _ap.py  _debug_gen.py  _gen.py  _gen2.py  _gen_tests.py  _test_write.py  _write_sm.py  analyze.py  build_all.py  check_syntax.py  conftest_header.py  fix_app_imports.py  gen2.py  gen_cfg.py  gen_dhan.py  gen_eb.py  gen_kv.py  gen_oa.py  gen_script.py  gen_ts.py  generate_files.py  make_stream.py  pyproject.toml  run.py  test_heredoc.py  test_heredoc2.py  test_quote.txt  test_signal_header.py  test_small.py  test_small2.py  test_small3.py  test_small4.py  test_small5.py  test_small6.py  update_app.py  (+6 more)
.opencode/plans/: COCKPIT_UI_IMPLEMENTATION.md  FINAL_BLUEPRINT.md  PHASE_1_FOUNDATIONS.md  PHASE_2_MVP.md  PHASE_3_ADVANCED.md
.projectos/context/: agent-instructions.md
.projectos/decisions/: INDEX.jsonl
.projectos/governance/: boundaries.json
.projectos/identity/: frozen-rules.md  phase.md  project.md
.projectos/knowledge/: known-facts.jsonl
.projectos/risks/: INDEX.jsonl
configs/: default.yaml  default_watchlist.yaml
docs/: HANDOFF_2026_07_23.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_RESET.md
docs/decisions/: ADR-001-initial-architecture.md
docs/upstream/: openbb-patterns.md
scripts/: enrich_sections.py  terminal_ui_scaffold.py  write_sections_6_7_8.py
src/shettyxtreme/: __init__.py
terminal/ui/: App.tsx
tests/: conftest.py  test_heredoc3_out.txt  test_long.txt
tests/core/: test_config.py  test_event_bus.py  test_kv_store.py  test_time_series_store.py
(+209 files in other folders)
