[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shettyxtreme"
version = "0.1.0"
description = "Unified Indian-market trading intelligence and execution platform"
requires-python = ">=3.11"
authors = [{name = "Rohan Shetty", email = "shettyrohan2@gmail.com"}]

dependencies = [
    "dhanhq>=0.1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "websockets>=11",
    "rich>=13",
    "structlog>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3",
]
openalgo = ["openalgo>=1.0.0"]
ui = ["pyqt6>=6.5", "pyqtgraph>=0.13"]
backtest = ["vectorbt>=0.3"]
research = ["jupyter", "matplotlib>=3.7", "seaborn>=0.12"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["shettyxtreme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
